--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "homebridge-bond",
+  "name": "homebridge-bond-testing",
   "version": "0.2.1",
-  "description": "A homebridge plugin to control your IR/RF devices via BOND.",
+  "description": "A testing fork of Evan Coleman's fantastic Bond homebridge plugin",
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
@@ -10,17 +10,14 @@
     "clean": "rimraf dist"
   },
   "keywords": [
-    "homebridge-plugin",
-    "bond",
-    "rf",
-    "ir"
+    "testing"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/edc1591/homebridge-bond.git"
+    "url": "git+https://github.com/vdotn/homebridge-bond.git"
   },
   "bugs": {
-    "url": "http://github.com/edc1591/homebridge-bond/issues"
+    "url": "http://github.com/vdotn/homebridge-bond/issues"
   },
   "engines": {
     "node": ">=0.12.0",
@@ -32,8 +29,10 @@
     "typescript": "^2.7.1"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.2"
-  }
+    "bluebird": "^3.5.4",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
+  },
+  "homepage": "https://github.com/vdotn/homebridge-bond#readme",
+  "author": "vdotn"
 }
